# SPIDER2

./: .gitignore  gold_incorrect.csv  log.txt  round1_snapshot.txt  round2_snapshot.txt  round3_snapshot.txt  validate_and_strong.md
methods/spider-agent-tc/: .env.example  run.smoke.sh  smoke.jsonl
methods/spider_agent_infini/: README.md  auto_fix.py  infini_credential copy.json  infini_credential.json  learn.py  pyproject.toml  requirements.txt  run.py  run_lite.py  snowflake_credential.json
methods/spider_agent_infini/spider_agent_infini/: spider_agent_setup_infini.py
methods/spider_agent_infini/spider_agent_infini.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
methods/spider_agent_infini/spider_agent_infini/api/: __init__.py  client.py  database.py
spider2-lite/evaluation_suite/example_submission_folder_csv/: local002.csv  local003.csv  local004.csv  local007.csv  local008.csv  local009.csv  local010.csv  local015.csv  local017.csv  local018.csv  local019.csv  local020.csv  local021.csv  local023.csv  local024.csv  local025.csv  local026.csv  local028.csv  local029.csv  local030.csv  local031.csv  local032.csv  local034.csv  local035.csv  local037.csv  local038.csv  local039.csv  local040.csv  local041.csv  local049.csv  local050.csv  local054.csv  local055.csv  local058.csv  local059.csv  local060.csv  local061.csv  local062.csv  local063.csv  local064.csv  (+87 more)
spider2-snow/evaluation_suite/: evaluate.py  example_submission_folder_csv.csv  log.txt
spider2-snow/evaluation_suite/example_submission_folder/: sf_bq001.sql  sf_bq002.sql  sf_bq003.sql  sf_bq004.sql  (+23 more)
(+547 files in other folders)
